Add Polish language

--- a/contactPL.html
+++ b/contactPL.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Contact me</title>
+        <title>Kontakt</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="style.css">
@@ -50,17 +50,17 @@
             <div class="navbarContainer">
                 <nav class="navbar">
                     <ul id="horizontal-list">
-                        <li><a href="/index.html" id="homepage">About me</a></li>
-                        <li><a href="/projects.html" id="projectspage">Projects</a></li>
-                        <li><a href="/services.html" id="servicespage">Services</a></li>
-                        <li><a href="/contact.html" id="contactpage">Contact</a></li>
+                        <li><a href="/indexPL.html" id="homepage">O mnie</a></li>
+                        <li><a href="/projectsPL.html" id="projectspage">Projekty</a></li>
+                        <li><a href="/servicesPL.html" id="servicespage">Usługi</a></li>
+                        <li><a href="/contactPL.html" id="contactpage">Kontakt</a></li>
                     </ul>
                 </nav>
             </div>
     
             <main id="swup" class="transition-fade">
                 <div id="Intro">
-                    <h1 id="page-subtitle">Contact</h1>
+                    <h1 id="page-subtitle">Kontakt</h1>
 
                     <p class="ContactInfo">
                         <i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/cezary-czuba%C5%82a-47a090207/?originalSubdomain=pl" style="text-decoration: none; color: black;"> Cezary Czubała</a><br>
@@ -73,7 +73,7 @@
                 </div>
 
                 <footer style="padding-top: 50px;">
-                    <p style="text-align: center;">Website by Cezary Czubała<br>Hosted on our beloved git service Github</p>
+                    <p style="text-align: center;">Strona stworzona przez Cezarego Czubałę<br>Hostowana na kochanym serwisie Github.</p>
                 </footer> 
 
             </main>
