--- a/indexPL.html
+++ b/indexPL.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About me</title>
+        <title>O mnie</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="style.css">
@@ -50,10 +50,10 @@
             <div class="navbarContainer">
                 <nav class="navbar">
                     <ul id="horizontal-list">
-                        <li><a href="/index.html" id="homepage">About me</a></li>
-                        <li><a href="/projects.html" id="projectspage">Projects</a></li>
-                        <li><a href="/services.html" id="servicespage">Services</a></li>
-                        <li><a href="/contact.html" id="contactpage">Contact</a></li>
+                        <li><a href="/indexPL.html" id="homepage">O mnie</a></li>
+                        <li><a href="/projectsPL.html" id="projectspage">Projekty</a></li>
+                        <li><a href="/servicesPL.html" id="servicespage">Usługi</a></li>
+                        <li><a href="/contactPL.html" id="contactpage">Kontakt</a></li>
                     </ul>
                 </nav>
             </div>
@@ -62,38 +62,38 @@
                 <div id="Intro">
 
                     <div class="switchLanguageField">
-                        <a class="SwitchLanguage" href="indexPL.html">Switch to Polish 🇵🇱</a>
+                        <a class="SwitchLanguage" href="index.html">Zmień język na angielski 🇬🇧</a>
                     </div>
 
                     <h1 id="page-subtitle">Cezary Czubała</h1>
                     <img id="profilePic" src="./images/profile.jpg">
                     <div class="content">
                         <br>
-                        I am a Computer Science student at the University of Wrocław and I specialise in game development and competitive programming/algorithmics. Whilst living in London, UK from 2010 till 2018, I graduated the Canon Palmer Catholic Academy and got my GCSEs. I moved to Poland where I graduated High School nr. 9 in Częstochowa in 2021, and since I've been living in Wrocław, studying Computer Science. <br><br>
-                        My aforementioned fields of expertise are game development and algorithmics. I mainly create my games in the Unity game engine, but I also know my way around the Allegro5 game API for pure C. Additionally thanks to my experience with Unity and hence my implicated knowledge of C#, I have experience in creating applications in the .NET framework as well as web apps that communicate with the cloud.
+                        Jestem studentem informatyki na Uniwersytecie Wrocławski i specjalizuję się w tworzeniu gier i programowaniu sportowym/algorytmice. Mieszkając w Londynie, UK od 2010 do 2018, ukończyłem gimnazjum Canon Palmer Catholic Academy i zdobyłem swoje GCSEs (oceny z egzaminów gimnazjalnych). Wróciłem do Polski w której ukończyłem L.O. im. C.K. Norwida w Częstochowie w 2021 r., i od tego czasu mieszkam we Wrocławiu. <br><br>
+                        Wcześniej wspomniałem, że specjalizuję się w tworzeniu gier i algorytmice. Gry swoje tworzę głównie w silniku Unity, aczkolwiek umiem równie pisać gry korzystając z Allegro5 API stworzony pod język C. Dodatkowo dzięki mojemy doświadczeniu w Unity, co za tym idzie w języku C#, my doświadczenie w pisaniu aplikacji w framework'u .NET jak i aplikacji web'owych komunikujących się z chmurą.
                     </div>
-                    <h1 id="page-subtitle">Experience</h1>
+                    <h1 id="page-subtitle">Doświadczenie</h1>
                     <div class="content">
                         <ul style="list-style: none; padding-top: 10px; width: 100%; padding-left: 0;">
                             <li class="experienceEntry">
                                 <h2> ZF Group (02/2019 - 04/2019)</h2>
-                                <h3>>Backend software developer<</h3>
+                                <h3>>Deweloper backend'owy<</h3>
                                 <p>
-                                    An apprenticeship given as a form of reward for a VR-themed Game Jam hosted by the ZF Group. Me and my friend, with who I participated in the game jam, were tasked with creating a web application in the .NET framework that stored its information in an Azure database. We managed to finish the application, however our apprenticeship was cut short due to the Covid outbreak.
+                                    Praktyki które otrzymałem jako nagrodę za wygraną w Game Jamie o tematyce VR zorganizowaną przez ZF Group. Ja i mój kolega, z którym brałem udział w tym konkursie, mieliśmy za zadanie stworzenie aplikacji webowej w .NET framework, która przechowywałaby informacji w chmurze za pomocą usługi Azure. Udało nam się stworzyć tę aplikację, aczkolwiek przez sytuację epidemiologiczną nasze praktyki zostały zakończone wcześniej.
                                 </p>
                             </li>
                             <li class="experienceEntry">
-                                <h2> High school nr. 9 in Częstochowa (since October 2021)</h2>
-                                <h3>>Algorithmics teacher<</h3>
+                                <h2> L.O. im. C.K. Norwida w Częstochowie (od października 2021)</h2>
+                                <h3>Nauczyciel algorytmiki<</h3>
                                 <p>
-                                    Along with a friend we lead Saturday workshops in our old high school during which we present OI (polish Informatics Olympiad) level problems, their solutions and different competitive programming techniques. We also organize programming camps for the students (unfortunately we are somewhat limited due to the Covid situation).
+                                    W raz z przyjacielem prowadzimy Sobotnie warsztaty w naszym starym liceum podczas których prezentujemy zadania i ich rozwiązania na poziomie OI'a (Olimpiady Informatycznej), jak i różne strategie i częste praktyki które się widzi na arenie programowania sportowego. Organizujemy również obozy dla naszych uczniów, lecz ze względu na sytuację epidemiologiczną (jak i zmienność prawa wobec tejże sytuacji) jesteśmy trochę ograniczeni.
                                 </p>
                             </li>
                             <li class="experienceEntry">
-                                <h2> Upwork (since 2020)</h2>
-                                <h3>>Freelance game developer<</h3>
+                                <h2> Upwork (od 2020)</h2>
+                                <h3>>Wolny twórca gier<</h3>
                                 <p>
-                                    During my free time I accept programming projects, usually focused around game development in the Unity game engine; these range from writing small fragments of code to creating whole games (usually mobile, as that's in demand). You can find reviews from my clients on my Upwork profile linked in the Contact page.
+                                    Gdy mam wolny czas akceptuję projekty programistyczne, zwykle skupione na tworzeniu gier w silniku Unity - bywają one różne, od pisania małych fragmentów kodu zaczynając, na tworzeniu pełnoprawnych gier kończąc (zazwyczaj gier mobilnych, albowiem na to jest głównie popyt). Opinie moich klientów można zobaczyć na moim profilu który wisi na stronie "Kontakt".
                                 </p>
                             </li>
                         </ul>
@@ -101,16 +101,16 @@
                     <h1 id="page-subtitle" style="color: rgb(30, 92, 30); padding-bottom: 10px; font-weight: normal;">Skills and certifications</h1>
                     <div class="content">
                         <ul style="font-size: larger; line-height: 40px;">
-                            <li>English (certified C2 level)</li>
-                            <li>Programming languages: C, C++, C#, Python, Javascript, HTML, CSS</li>
-                            <li>Game dev software: Unity, Blender, Audacity, etc.</li>
-                            <li>Well-versed in Linux and git</li>
+                            <li>Angielski (certyfikowany poziom C2)</li>
+                            <li>Języki programowania: C, C++, C#, Python, Javascript, HTML, CSS</li>
+                            <li>Znajomość programów: Unity, Blender, Audacity, etc.</li>
+                            <li>Dobrze zaznajomiony z Linux'em jak i git'em</li>
                         </ul>
                     </div>
                 </div>
 
                 <footer style="padding-top: 50px;">
-                    <p style="text-align: center;">Website by Cezary Czubała<br>Hosted on our beloved git service Github</p>
+                    <p style="text-align: center;">Strona stworzona przez Cezarego Czubałę<br>Hostowana na kochanym serwisie Github.</p>
                 </footer> 
             </main>
         </div>
