--- a/servicesPL.html
+++ b/servicesPL.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About me</title>
+        <title>Usługi</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="style.css">
@@ -50,67 +50,44 @@
             <div class="navbarContainer">
                 <nav class="navbar">
                     <ul id="horizontal-list">
-                        <li><a href="/index.html" id="homepage">About me</a></li>
-                        <li><a href="/projects.html" id="projectspage">Projects</a></li>
-                        <li><a href="/services.html" id="servicespage">Services</a></li>
-                        <li><a href="/contact.html" id="contactpage">Contact</a></li>
+                        <li><a href="/indexPL.html" id="homepage">O mnie</a></li>
+                        <li><a href="/projectsPL.html" id="projectspage">Projekty</a></li>
+                        <li><a href="/servicesPL.html" id="servicespage">Usługi</a></li>
+                        <li><a href="/contactPL.html" id="contactpage">Kontakt</a></li>
                     </ul>
                 </nav>
             </div>
     
             <main id="swup" class="transition-fade">
                 <div id="Intro">
+                    <h1 id="page-subtitle">Usługi</h1>
 
-                    <div class="switchLanguageField">
-                        <a class="SwitchLanguage" href="indexPL.html">Switch to Polish 🇵🇱</a>
-                    </div>
-
-                    <h1 id="page-subtitle">Cezary Czubała</h1>
-                    <img id="profilePic" src="./images/profile.jpg">
                     <div class="content">
-                        <br>
-                        I am a Computer Science student at the University of Wrocław and I specialise in game development and competitive programming/algorithmics. Whilst living in London, UK from 2010 till 2018, I graduated the Canon Palmer Catholic Academy and got my GCSEs. I moved to Poland where I graduated High School nr. 9 in Częstochowa in 2021, and since I've been living in Wrocław, studying Computer Science. <br><br>
-                        My aforementioned fields of expertise are game development and algorithmics. I mainly create my games in the Unity game engine, but I also know my way around the Allegro5 game API for pure C. Additionally thanks to my experience with Unity and hence my implicated knowledge of C#, I have experience in creating applications in the .NET framework as well as web apps that communicate with the cloud.
-                    </div>
-                    <h1 id="page-subtitle">Experience</h1>
-                    <div class="content">
-                        <ul style="list-style: none; padding-top: 10px; width: 100%; padding-left: 0;">
+                        <ul style="list-style: none; padding-top: 10px;">
                             <li class="experienceEntry">
-                                <h2> ZF Group (02/2019 - 04/2019)</h2>
-                                <h3>>Backend software developer<</h3>
+                                <h2>Korepetycje dla licealistów i studentów</h2>
                                 <p>
-                                    An apprenticeship given as a form of reward for a VR-themed Game Jam hosted by the ZF Group. Me and my friend, with who I participated in the game jam, were tasked with creating a web application in the .NET framework that stored its information in an Azure database. We managed to finish the application, however our apprenticeship was cut short due to the Covid outbreak.
+                                    Oferuję korepetycje z matematyki bądź informatyki dla licealistów (normalne jak i przygotowania pod maturę), najlepiej stacjonarnie. Ceny są następujące: 60zł za godzinę zegarową, i 100zł za 2 godziny. Oferuję również rozmówki po angielsku w cenie 50zł za godzinę (tutaj już dowolność wobec trybu).
                                 </p>
                             </li>
                             <li class="experienceEntry">
-                                <h2> High school nr. 9 in Częstochowa (since October 2021)</h2>
-                                <h3>>Algorithmics teacher<</h3>
+                                <h2> Projekty programistyczne</h2>
                                 <p>
-                                    Along with a friend we lead Saturday workshops in our old high school during which we present OI (polish Informatics Olympiad) level problems, their solutions and different competitive programming techniques. We also organize programming camps for the students (unfortunately we are somewhat limited due to the Covid situation).
+                                    Wolę osobiście projekty o tematyce growej, lecz jestem w stanie pomóc we wszystkim (póki nie jest to naprawa Twojej zmywarki). NIE pomagam z egzaminami na studiach. Cenę i termin projektu możemy ustalić e-mailowo lub w dowolnej innej formie kontaktu.
                                 </p>
                             </li>
                             <li class="experienceEntry">
-                                <h2> Upwork (since 2020)</h2>
-                                <h3>>Freelance game developer<</h3>
+                                <h2>Profil na Upwork</h2>
                                 <p>
-                                    During my free time I accept programming projects, usually focused around game development in the Unity game engine; these range from writing small fragments of code to creating whole games (usually mobile, as that's in demand). You can find reviews from my clients on my Upwork profile linked in the Contact page.
+                                    Jak wcześniej wspomniałem na stronie "O mnie", wykonuję zlecenia programistyczne na serwisie Upwork, i jeśli czujesz się bardziej komfortowo zatrudniając mnie tam to zachęcam do wysłania zaproszenia. Link do mojego profilu na Upwork'u można znaleźć na mojej stronie "Kontakt".
                                 </p>
                             </li>
-                        </ul>
-                    </div>
-                    <h1 id="page-subtitle" style="color: rgb(30, 92, 30); padding-bottom: 10px; font-weight: normal;">Skills and certifications</h1>
-                    <div class="content">
-                        <ul style="font-size: larger; line-height: 40px;">
-                            <li>English (certified C2 level)</li>
-                            <li>Programming languages: C, C++, C#, Python, Javascript, HTML, CSS</li>
-                            <li>Game dev software: Unity, Blender, Audacity, etc.</li>
-                            <li>Well-versed in Linux and git</li>
                         </ul>
                     </div>
                 </div>
 
                 <footer style="padding-top: 50px;">
-                    <p style="text-align: center;">Website by Cezary Czubała<br>Hosted on our beloved git service Github</p>
+                    <p style="text-align: center;">Strona stworzona przez Cezarego Czubałę<br>Hostowana na kochanym serwisie Github.</p>
                 </footer> 
             </main>
         </div>
@@ -121,7 +98,6 @@
         </script>
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-
     </body>
 
 </html>
