--- a/projects.html
+++ b/projects.html
@@ -14,19 +14,19 @@
             function UpdateString(){
                 let text = document.location.toString();
                 const chars = text.split('/');
-                if(chars[chars.length-1] == "projects.html"){
+                if(chars[chars.length-1] == "projects.html" || chars[chars.length-1] == "projectsPL.html"){
                     document.getElementById("homepage").style.border = "none";
                     document.getElementById("projectspage").style.border = "solid 2px";
                     document.getElementById("servicespage").style.border = "none";
                     document.getElementById("contactpage").style.border = "none";
                 }
-                else if(chars[chars.length-1] == "services.html"){
+                else if(chars[chars.length-1] == "services.html" || chars[chars.length-1] == "servicesPL.html"){
                     document.getElementById("homepage").style.border = "none";
                     document.getElementById("projectspage").style.border = "none";
                     document.getElementById("servicespage").style.border = "solid 2px";
                     document.getElementById("contactpage").style.border = "none";
                 }
-                else if(chars[chars.length-1] == "contact.html"){
+                else if(chars[chars.length-1] == "contact.html" || chars[chars.length-1] == "contactPL.html"){
                     document.getElementById("homepage").style.border = "none";
                     document.getElementById("projectspage").style.border = "none";
                     document.getElementById("servicespage").style.border = "none";
