--- a/services.html
+++ b/services.html
@@ -14,19 +14,19 @@
             function UpdateString(){
                 let text = document.location.toString();
                 const chars = text.split('/');
-                if(chars[chars.length-1] == "projects.html"){
+                if(chars[chars.length-1] == "projects.html" || chars[chars.length-1] == "projectsPL.html"){
                     document.getElementById("homepage").style.border = "none";
                     document.getElementById("projectspage").style.border = "solid 2px";
                     document.getElementById("servicespage").style.border = "none";
                     document.getElementById("contactpage").style.border = "none";
                 }
-                else if(chars[chars.length-1] == "services.html"){
+                else if(chars[chars.length-1] == "services.html" || chars[chars.length-1] == "servicesPL.html"){
                     document.getElementById("homepage").style.border = "none";
                     document.getElementById("projectspage").style.border = "none";
                     document.getElementById("servicespage").style.border = "solid 2px";
                     document.getElementById("contactpage").style.border = "none";
                 }
-                else if(chars[chars.length-1] == "contact.html"){
+                else if(chars[chars.length-1] == "contact.html" || chars[chars.length-1] == "contactPL.html"){
                     document.getElementById("homepage").style.border = "none";
                     document.getElementById("projectspage").style.border = "none";
                     document.getElementById("servicespage").style.border = "none";
@@ -62,22 +62,19 @@
                 <div id="Intro">
                     <h1 id="page-subtitle">Services</h1>
 
-                    <div class="content">
-                        You can contact me to make any arrangements regarding these services.
-                    </div>
 
                     <div class="content">
                         <ul style="list-style: none; padding-top: 10px;">
                             <li class="experienceEntry">
-                                <h2>High school tuition</h2>
+                                <h2>High school and university tuition</h2>
                                 <p>
-                                    I offer maths and computer science tuition to high school students, preferably stationary. Prices are to be settled, but generally it's 60zł per hour and 100zł for 2 hours. I also offer English conversation practice for 50zł per hour.
+                                    I offer maths and computer science tuition to high school students, preferably stationary. The prices are as follows: 60zł per hour and 100zł for 2 hours. I also offer English conversation practice for 50zł per hour.
                                 </p>
                             </li>
                             <li class="experienceEntry">
                                 <h2> Programming projects</h2>
                                 <p>
-                                    You can hire me (preferably part-time, as I've got university) as a programmer for your projects. I am comfortable in git and have experience working in larger companies on of course larger projects. The pricing is to be settled and is dependent on how requiring the job will be.
+                                    I prefer projects focused around game development, however I will help you with practically anything (as long as it isn't fixing your dishwasher). I will NOT help you with your University exam. We can discuss the pricing and deadline over e-mail or other form of communication.
                                 </p>
                             </li>
                             <li class="experienceEntry">
