Fix few grammar errors

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <img id="profilePic" src="./images/profile.jpg">
                     <div class="content">
                         <br>
-                        I am a Computer Science student at the University of Wrocław and I specialise in game development and competitive programming/algorithmics. Whilst living in London, UK from 2010 till 2018, I graduated the Canon Palmer Catholic Academy and got my GCSEs. I moved to Poland where I graduated High School nr. 9 in Częstochowa in 2021, and since I've been living in Wrocław, studying Computer Science. <br><br>
+                        I am a Computer Science student at the University of Wrocław and I specialise in game development and competitive programming/algorithmics. Whilst living in London, UK from 2010 till 2018, I graduated the Canon Palmer Catholic Academy and got the third best GCSE results. I moved to Poland where I graduated High School nr. 9 in Częstochowa in 2021, and since I've been living in Wrocław, studying Computer Science. <br><br>
                         My aforementioned fields of expertise are game development and algorithmics. I mainly create my games in the Unity game engine, but I also know my way around the Allegro5 game API for pure C. Additionally thanks to my experience with Unity and hence my implicated knowledge of C#, I have experience in creating applications in the .NET framework as well as web apps that communicate with the cloud.
                     </div>
                     <h1 id="page-subtitle">Experience</h1>
