--- a/indexPL.html
+++ b/indexPL.html
@@ -69,8 +69,8 @@
                     <img id="profilePic" src="./images/profile.jpg">
                     <div class="content">
                         <br>
-                        Jestem studentem informatyki na Uniwersytecie Wrocławski i specjalizuję się w tworzeniu gier i programowaniu sportowym/algorytmice. Mieszkając w Londynie, UK od 2010 do 2018, ukończyłem gimnazjum Canon Palmer Catholic Academy i zdobyłem swoje GCSEs (oceny z egzaminów gimnazjalnych). Wróciłem do Polski w której ukończyłem L.O. im. C.K. Norwida w Częstochowie w 2021 r., i od tego czasu mieszkam we Wrocławiu. <br><br>
-                        Wcześniej wspomniałem, że specjalizuję się w tworzeniu gier i algorytmice. Gry swoje tworzę głównie w silniku Unity, aczkolwiek umiem równie pisać gry korzystając z Allegro5 API stworzony pod język C. Dodatkowo dzięki mojemy doświadczeniu w Unity, co za tym idzie w języku C#, my doświadczenie w pisaniu aplikacji w framework'u .NET jak i aplikacji web'owych komunikujących się z chmurą.
+                        Jestem studentem informatyki na Uniwersytecie Wrocławski i specjalizuję się w tworzeniu gier i programowaniu sportowym/algorytmice. Mieszkając w Londynie, UK od 2010 do 2018, ukończyłem gimnazjum Canon Palmer Catholic Academy i osiągnąłem trzeci najlepszy wynik w egzaminach GCSE (brytyjskie egzaminy gimnazjalne). Wróciłem do Polski w której ukończyłem L.O. im. C.K. Norwida w Częstochowie w 2021 r., i od tego czasu mieszkam we Wrocławiu. <br><br>
+                        Gry swoje tworzę głównie w silniku Unity, aczkolwiek umiem również pisać gry korzystając z Allegro5 API stworzony pod język C. Dodatkowo dzięki mojemu doświadczeniu w Unity, co za tym idzie w języku C#, dobrze sobie radzę z pisaniem aplikacji w framework'u .NET jak i aplikacji web'owych komunikujących się z chmurą.
                     </div>
                     <h1 id="page-subtitle">Doświadczenie</h1>
                     <div class="content">
@@ -84,7 +84,7 @@
                             </li>
                             <li class="experienceEntry">
                                 <h2> L.O. im. C.K. Norwida w Częstochowie (od października 2021)</h2>
-                                <h3>Nauczyciel algorytmiki<</h3>
+                                <h3>>Nauczyciel algorytmiki<</h3>
                                 <p>
                                     W raz z przyjacielem prowadzimy Sobotnie warsztaty w naszym starym liceum podczas których prezentujemy zadania i ich rozwiązania na poziomie OI'a (Olimpiady Informatycznej), jak i różne strategie i częste praktyki które się widzi na arenie programowania sportowego. Organizujemy również obozy dla naszych uczniów, lecz ze względu na sytuację epidemiologiczną (jak i zmienność prawa wobec tejże sytuacji) jesteśmy trochę ograniczeni.
                                 </p>
