--- a/servicesPL.html
+++ b/servicesPL.html
@@ -73,7 +73,7 @@
                             <li class="experienceEntry">
                                 <h2> Projekty programistyczne</h2>
                                 <p>
-                                    Wolę osobiście projekty o tematyce growej, lecz jestem w stanie pomóc we wszystkim (póki nie jest to naprawa Twojej zmywarki). NIE pomagam z egzaminami na studiach. Cenę i termin projektu możemy ustalić e-mailowo lub w dowolnej innej formie kontaktu.
+                                    Wolę osobiście projekty skupione wokół Game Dev'u, lecz jestem w stanie pomóc we wszystkim (póki nie jest to naprawa Twojej zmywarki). NIE pomagam z egzaminami na studiach. Cenę i termin projektu możemy ustalić e-mailowo lub w dowolnej innej formie kontaktu.
                                 </p>
                             </li>
                             <li class="experienceEntry">
