--- a/indexPL.html
+++ b/indexPL.html
@@ -57,6 +57,12 @@
                     </ul>
                 </nav>
             </div>
+
+            <div style="width: 100%; text-align: center; padding-top: 20px;">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Flag_of_Ukraine.svg/2560px-Flag_of_Ukraine.svg.png" style="width:100px; height:50px; position: relative;">
+                <br>
+                Razem z Ukrainą
+            </div>
     
             <main id="swup" class="transition-fade">
                 <div id="Intro">
