Add Vonage internship info

--- a/index.html
+++ b/index.html
@@ -386,9 +386,25 @@
                 <div class="swiper-slide">
                   <div class="testimonial-box">
                     <div class="author-test">
+                      <img src="assets/img/vonageLogo.png" alt="" class="rounded-circle b-shadow-a">
+                      <span class="author">Vonage</span>
+                      <span class="author">Software Engineer Internship</span>
+                      <span class="author" style="font-size: 1rem;">(since 07/2022)</span>
+                    </div>
+                    <div class="content-test">
+                      <p class="description lead">
+                        Working on developing microservices and REST Api with ASP.NET Core for Vonage products.
+                      </p>
+                    </div>
+                  </div>
+                </div><!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-box">
+                    <div class="author-test">
                       <img src="assets/img/ZFGroup.jpg" alt="" class="rounded-circle b-shadow-a">
                       <span class="author">ZF Group</span>
-                      <span class="author">Backend Software Developer</span>
+                      <span class="author">Backend Software Developer Apprenticeship</span>
                       <span class="author" style="font-size: 1rem;">(01/2019 - 04/2019)</span>
                     </div>
                     <div class="content-test">
@@ -405,7 +421,7 @@
                       <img src="assets/img/Norwid.jpg" alt="" class="rounded-circle b-shadow-a">
                       <span class="author">High school nr. 9 in Częstochowa</span>
                       <span class="author">Competitive programming teacher</span>
-                      <span class="author" style="font-size: 1rem;">Since 10/2021</span>
+                      <span class="author" style="font-size: 1rem;">(10/2021 - 06/2022)</span>
                     </div>
                     <div class="content-test">
                       <p class="description lead">
