--- a/index.html
+++ b/index.html
@@ -386,6 +386,22 @@
                 <div class="swiper-slide">
                   <div class="testimonial-box">
                     <div class="author-test">
+                      <img src="assets/img/Vonage.jpg" alt="" class="rounded-circle b-shadow-a">
+                      <span class="author">Vonage</span>
+                      <span class="author">Software Engineer internship</span>
+                      <span class="author" style="font-size: 1rem;">(07/2022 - 09/2022)</span>
+                    </div>
+                    <div class="content-test">
+                      <p class="description lead">
+                        An internship at Vonage as a software engineer where I worked on web-services in the ASP.NET Framework. Learned the inner mechanisms of a larger company and gained a lot experience working with senior and mid developers.
+                      </p>
+                    </div>
+                  </div>
+                </div><!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-box">
+                    <div class="author-test">
                       <img src="assets/img/ZFGroup.jpg" alt="" class="rounded-circle b-shadow-a">
                       <span class="author">ZF Group</span>
                       <span class="author">Backend Software Developer</span>
