Add tuition link

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               <div class="service-content">
                 <h2 class="s-title">Tuition</h2>
                 <p class="s-description text-center">
-                  Maths and/or Computer Science tuition for high school students.
+                  Maths and/or Computer Science tuition for high school and university students.
                 </p>
               </div>
             </div>
@@ -421,11 +421,11 @@
                       <img src="assets/img/Norwid.jpg" alt="" class="rounded-circle b-shadow-a">
                       <span class="author">High school nr. 9 in Częstochowa</span>
                       <span class="author">Competitive programming teacher</span>
-                      <span class="author" style="font-size: 1rem;">Since 10/2021</span>
+                      <span class="author" style="font-size: 1rem;">(10/2021 - 07/2022)</span>
                     </div>
                     <div class="content-test">
                       <p class="description lead">
-                        Along with a friend we lead Saturday workshops in our old high school during which we present OI (polish Informatics Olympiad) level problems, their solutions and different competitive programming techniques. We also organize programming camps for the students (unfortunately we are somewhat limited due to the Covid situation).
+                        Along with a friend we led Saturday workshops in our old high school during which we present OI (polish Informatics Olympiad) level problems, their solutions and different competitive programming techniques. We also organize programming camps for the students (unfortunately we are somewhat limited due to the Covid situation).
                       </p>
                     </div>
                   </div>
@@ -464,6 +464,7 @@
                         <li><span class="bi bi-geo-alt"></span> Wrocław / Częstochowa</li>
                         <li><span class="bi bi-phone"></span> (+48) 730 071 704</li>
                         <li><span class="bi bi-envelope"></span> czarek.czubala@gmail.com</li>
+                        <li><span class="bi bi-book"></span><a href="https://www.e-korepetycje.net/czarekcz"> E-korepetycje profile</a></li>
                       </ul>
                     </div>
                     <div class="socials">
