--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/CVPhoto.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/CVPhoto2.jpg" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
@@ -102,25 +102,25 @@
                   </div>
                   <div class="skill-mf">
                     <p class="title-s">Skill</p>
-                    <span>Web languages</span> <span class="pull-right">65%</span>
+                    <span>Web technologies</span> <span class="pull-right">65%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 65%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Python</span> <span class="pull-right">70%</span>
+                    <span>Python</span> <span class="pull-right">60%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>C++/C</span> <span class="pull-right">95%</span>
+                    <span>C++/C</span> <span class="pull-right">85%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>C#/Java</span> <span class="pull-right">90%</span>
+                    <span>C#/.NET</span> <span class="pull-right">83%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 83%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>Unity</span> <span class="pull-right">90%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>AngularJS</span> <span class="pull-right">75%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                 </div>
@@ -132,10 +132,10 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      I am a Computer Science student at the University of Wrocław and I specialise in game development and competitive programming/algorithmics. Whilst living in London, UK from 2010 till 2018, I graduated the Canon Palmer Catholic Academy and got the third best GCSE results. I moved to Poland where I graduated High School nr. 9 in Częstochowa in 2021, and since I've been living in Wrocław, studying Computer Science.
+                      Hi, I'm Cezary, a CompSci student with a passion for game development, software engineering and algorithmics. I've lived in London for 8 years from 2010 till 2018, so saying I'm comfortable with my English skills would be quite an understatement. During my days in secondary school I developed an interest in game development, which I nurtured by studying the Unity game engine.
                     </p>
                     <p class="lead">
-                      My aforementioned fields of expertise are game development and algorithmics. I mainly create my games in the Unity game engine, but I also know my way around the Allegro5 game API for pure C. Additionally thanks to my experience with Unity and hence my implicated knowledge of C#, I have experience in creating applications in the .NET framework as well as web apps that communicate with the cloud.
+                      Alongside my Unity journey, I also studied C++ and algorithmics, which I too find myself very comfortable with, having even taught High school students in the past academic year. And although I live and breath computing, I do enjoy playing guitar, drawing and sketching, exercising, listening to some good music and playing games (mostly RPGs and casual action games).
                     </p>
                   </div>
                 </div>
