--- a/index.html
+++ b/index.html
@@ -101,27 +101,16 @@
                     </div>
                   </div>
                   <div class="skill-mf">
-                    <p class="title-s">Skill</p>
-                    <span>Web technologies</span> <span class="pull-right">65%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 65%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>Python</span> <span class="pull-right">60%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>C++/C</span> <span class="pull-right">85%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>C#/.NET</span> <span class="pull-right">83%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 83%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>Unity</span> <span class="pull-right">90%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
+                    <h6 class="title-left">Skills</h6>
+                    <br>
+                    <p class="lead" style="margin-left: 10px; text-align: center;">
+                      <span class="skill">C++ / C</span><br>
+                      <span class="skill">Unity</span><br>
+                      <span class="skill">C# / .NET</span><br>
+                      <span class="skill">Java</span><br>
+                      <span class="skill">Git</span><br>
+                      <span class="skill">Jira</span><br>
+                    </p>
                   </div>
                 </div>
                 <div class="col-md-6">
